syntax= "proto3";

package greetStreamingpb;
option go_package="greetStreamingpb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message LongGreetRequest {
  Greeting content = 1;
}
message LongGreetResponse {
  string result = 1;
}

service GreetService {
  //streaming API
  rpc GreetMany(GreetManyRequest) returns (stream GreetManyResponse) {};

  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
};

////////////////////

message GreetManyRequest {
  Greeting content = 1;
}

message GreetManyResponse {
  string result = 1;
}